Updated our h1 tag with name and filled out all other questions about me

--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Matt Wieciech</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Have been living in the digial space for a long time.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Baltimore, MD</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Video games, cooking, movies, reading, soccer.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Full Stack Web Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Washington, DC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It's the ultimate mix of art and science, solving problems through code and creating amazing online experiences is fun and rewarding.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="https://github.com/wheaties5588">Github</a></li>
         </ul>
     </footer>
 </body>
