Updated introduction to sound cooler

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Have been living in the digial space for a long time.</p>
+      <p>Have been living in digial space for a long time.</p>
       <h1>Where I'm From</h1>
       <p>Baltimore, MD</p>
       <h1>What are your favorite hobbies?</h1>
